@@ -86,3 +86,11 @@ function selectField(element)
                 return "Select All";
         }
 }
+
+
+function popup_art(url) {
+        var newwindow;
+        newwindow=window.open(url, "ampache_art", "menubar=no,toolbar=no,location=no,directories=no");
+        if (window.focus) {newwindow.focus()}
+}
+
